@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: SVT Search(Fixes #782)
+Fixed: UR Play changed subtitle formats (Fixes #784)
 
 [I]Previous changes[/I]N
+Fixed: SVT Search(Fixes #782)
 Fixed: TV4 Play updated their Video API (Fixes #779)
 Fixed: SVT updated their API again :sigh: (Fixes #776)
 Fixed: Don't show Oppet Arkiv in SVT (Fixes #774)
