@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: ViaFree parsing (Fixes #765)
+Fixed: ViaSat changed subtitle formats (Fixes #784)
 
 [I]Previous changes[/I]
+Fixed: ViaFree parsing (Fixes #765)
 Fixed: ViaFree Search will move to 'Titles with other chars' when enable 'Group list if exceeds # of folders' (Fixes #753)
 Fixed: MTG update their sites to a new standard and broke the Swedish and Norwegian channels (See #750)
 Fixed: more TV6 (MTG) stream issues
